--- a/YAMLEdit.csproj
+++ b/YAMLEdit.csproj
@@ -1,9 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
-
+	<PropertyGroup>
+		<OutputType>Library</OutputType>
+		<TargetFramework>net6.0</TargetFramework>
+		<LangVersion>10</LangVersion>
+	</PropertyGroup>
   <ItemGroup>
     <PackageReference Include="YamlDotNet" Version="11.0.1" />
   </ItemGroup>
